objects/Contact_Stage_History_Lead__c/Contact_Stage_History_Lead__c.object-meta.xml
<CustomObject>
    <description>Captures the Contact Stage history for all Leads, throughout the entire lifecycle of the Lead. Jira ticket SS-12156</description>
    <label>Contact Stage History (Lead)</label>
    <nameField>
        <displayFormat>CSHL-{0000000}</displayFormat>
        <label>Contact Stage History (Lead) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Stage Histories (Lead)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>