objects/Contact_Stage_History_Lead__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lead record on which the Contact Stage changed.Jira ticket   SS-12157</description>
    <inlineHelpText>The Lead record on which the Contact Stage changed.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Contact Stage Histories (Lead)</relationshipLabel>
    <relationshipName>Contact_Stage_Histories_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>