objects/Contact_Stage_History_Lead__c/fields/Previous_Contact_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contact_Stage__c</fullName>
    <description>The previous Contact Stage value.Jira ticket SS-12158</description>
    <inlineHelpText>The previous Contact Stage value.</inlineHelpText>
    <label>Previous Contact Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>