objects/Contact_Stage_History_Lead__c/fields/Stage_Exit_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Stage_Exit_DateTime__c</fullName>
    <description>The Date and Time that the record exited the Contact Stage. Jira ticket   SS-12160</description>
    <inlineHelpText>The Date and Time that the record exited the Contact Stage.</inlineHelpText>
    <label>Stage Exit DateTime</label>
    <type>DateTime</type>
</CustomField>