objects/Contact_Stage_History_Lead__c/fields/Stage_Skipped__c.field-meta.xml
<CustomField>
    <fullName>Stage_Skipped__c</fullName>
    <description>Formula field to return TRUE if a Stage was skipped in the funnel. SS-12262</description>
    <formula>Stage_Entry_DateTime__c == Stage_Exit_DateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Was this a skipped stage in the funnel?</inlineHelpText>
    <label>Stage Skipped</label>
    <type>Checkbox</type>
</CustomField>